--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
   <p> 6. Create a Card Layout using CSS layout properties.
     <a href="./page/practical 6.html">Practical-6</a>
   </p>
- 
+  <p> 7. Create a Web Page Layout using div tags.
+  <a href="./page/practical 7.html">Prcactical-7</a>
+</p>
   </body>
 </html>
