--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
   <p> 7. Create a Web Page Layout using div tags.
   <a href="./page/practical 7.html">Prcactical-7</a>
 </p>
+<p> 8. Create a Web Page having Fixed Navigation Bar with the given content.
+  <a href="./page/practical 8.html">Practical-8</a>
+</p>
   </body>
 </html>
