--- a/index.html
+++ b/index.html
@@ -45,5 +45,9 @@
 <p> 8. Create a Web Page having Fixed Navigation Bar with the given content.
   <a href="./page/practical 8.html">Practical-8</a>
 </p>
+<p> 9. Create a Responsive Web Layout with Responsive Navigation Bar.
+  <a href="./page/practical 9.html">Practical-9</a>
+</p>
+
   </body>
 </html>
