--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 <p> 9. Create a Responsive Web Layout with Responsive Navigation Bar.
   <a href="./page/practical 9.html">Practical-9</a>
 </p>
-
+<p> 10. Create a Responsive Side-Bar Navigation Menu.
+  <a href="./page/practical 10.html">Practical-10</a>
+</p>
   </body>
 </html>
