--- a/index.html
+++ b/index.html
@@ -51,5 +51,8 @@
 <p> 10. Create a Responsive Side-Bar Navigation Menu.
   <a href="./page/practical 10.html">Practical-10</a>
 </p>
+<p>11. Create a Responsive footer template.
+  <a href="./page/practical 11.html">Practical-11</a>
+</p>
   </body>
 </html>
