--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             Application/td>
           </td>
           <td class="jbl">
-            <a href="./page/practical 5 html.html">Practical-5</a>
+            <a href="./page/practical 5.html">Practical-5</a>
           </td>
         </tr>
         <tr>
@@ -208,7 +208,7 @@
           <td>12</td>
           <td>Create a table that represents live practical book records.</td>
           <td class="jbl">
-            <a href="./page/Practical 12">Practical-12</a>
+            <a href="./page/Practical 12.html">Practical-12</a>
           </td>
         </tr>
       </tbody>
