--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
           <td>6</td>
           <td>Create a Card Layout using CSS layout properties./td></td>
           <td class="jbl">
-            <a href="./page/Practical 6.html">Practical-6</a>
+            <a href="./page/practical 6.html">Practical-6</a>
           </td>
         </tr>
         <tr>
           <td>7</td>
           <td>Create a Web Page Layout using div tags.</td>
           <td class="jbl">
-            <a href="./page/Practical 7.html">Practical-7</a>
+            <a href="./page/practical 7.html">Practical-7</a>
           </td>
         </tr>
         <tr>
@@ -178,7 +178,7 @@
             content.
           </td>
           <td class="jbl">
-            <a href="./page/Practical 8.html">Practical-8</a>
+            <a href="./page/practical 8.html">Practical-8</a>
           </td>
         </tr>
         <tr>
@@ -187,28 +187,28 @@
             Create a Responsive Web Layout with Responsive Navigation Bar.
           </td>
           <td class="jbl">
-            <a href="./page/Practical 9.html">Practical-9</a>
+            <a href="./page/practical 9.html">Practical-9</a>
           </td>
         </tr>
         <tr>
           <td>10</td>
           <td>Create a Responsive Side-Bar Navigation Menu.</td>
           <td class="jbl">
-            <a href="./page/Practical 10.html">Practical-10</a>
+            <a href="./page/practical 10.html">Practical-10</a>
           </td>
         </tr>
         <tr>
           <td>11</td>
           <td>Create a Responsive footer template.</td>
           <td class="jbl">
-            <a href="./page/Practical 11.html">Practical-11</a>
+            <a href="./page/practical 11.html">Practical-11</a>
           </td>
         </tr>
         <tr>
           <td>12</td>
           <td>Create a table that represents live practical book records.</td>
           <td class="jbl">
-            <a href="./page/Practical 12.html">Practical-12</a>
+            <a href="./page/practical 12.html">Practical-12</a>
           </td>
         </tr>
       </tbody>
