--- a/index.html
+++ b/index.html
@@ -209,7 +209,14 @@
           <td>Create a table that represents live practical book records.</td>
           <td class="jbl">
             <a href="./page/practical 12.html">Practical-12</a>
-          </td>
+            </td>
+            <tr>
+            <td>14</td>
+            <td>Create a counter page using javascript</td>
+            <td class="jbl">
+              <a href="./page/practical 14.html">practical-14</a>
+            </td>
+          </tr>
         </tr>
       </tbody>
     </table>
