--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
           <td class="jbl">
             <a href="./page/practical 12.html">Practical-12</a>
             </td>
+          </tr>
             <tr>
             <td>14</td>
             <td>Create a counter page using javascript</td>
@@ -217,7 +218,21 @@
               <a href="./page/practical 14.html">practical-14</a>
             </td>
           </tr>
-        </tr>
+          <tr>
+            <td>15</td>
+            <td>Create an HTML form and validate it with javascript </td>
+            <td class="jbl">
+              <a href="./page/practical 15.html">Practical-15</a>
+              </td>
+            </tr>
+              <tr>
+              <td>Final Practical</td>
+              <td>Final practical</td>
+              <td class="jbl">
+                <a href="./page/finalpractical.html">final practical</a>
+              </td>
+            </tr>
+          
       </tbody>
     </table>
   </body>
